--- a/scripts/install
+++ b/scripts/install
@@ -103,15 +103,14 @@ ynh_add_nginx_config
 #=================================================
 # CREATE DATA DIRECTORY
 #=================================================
-ynh_script_progression --message="Creating a data directory..." --weight=1
+ynh_script_progression --message="Creating a data directory..." --weight=2
 
 datadir=/home/yunohost.app/$app
 ynh_app_setting_set --app=$app --key=datadir --value=$datadir
 
 mkdir -p $datadir
-
-mkdir -p $datadir/media/album-art
-mkdir -p $datadir/media/db
+mkdir -p "$datadir/media/album-art"
+mkdir -p "$datadir/media/db"
 
 chmod 750 "$datadir"
 chmod -R o-rwx "$datadir"
@@ -162,7 +161,6 @@ ynh_use_logrotate
 ynh_script_progression --message="Integrating service in YunoHost..." --weight=3
 
 yunohost service add $app --description="Music streaming server" --log="/var/log/$app/$app.log"
-## service though so you should re-provide all relevant flags when doing so)
 
 #=================================================
 # START SYSTEMD SERVICE
