--- a/scripts/install
+++ b/scripts/install
@@ -120,10 +120,10 @@ chown -R $app:www-data "$datadir"
 #=================================================
 ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-ynh_add_config --template="../conf/default.conf" --destination="$final_path/save/conf/default.json"
+ynh_add_config --template="../conf/default.conf" --destination="$final_path/default.json"
 
-chmod 650 "$final_path/save/conf/default.json"
-chown $app:$app "$final_path/save/conf/default.json"
+chmod 650 "$final_path/default.json"
+chown $app:$app "$final_path/default.json"
 
 #=================================================
 # SETUP SYSTEMD
