--- a/scripts/install
+++ b/scripts/install
@@ -67,6 +67,8 @@ ynh_app_setting_set --app=$app --key=port --value=$port
 #=================================================
 ynh_script_progression --message="Installing dependencies..." --weight=15
 
+ynh_exec_warn_less ynh_install_nodejs --nodejs_version=$nodejs_version
+
 ynh_install_app_dependencies $pkg_dependencies
 
 #=================================================
