--- a/scripts/install
+++ b/scripts/install
@@ -53,6 +53,16 @@ chmod 650 "$install_dir/default.json"
 chown $app:$app "$install_dir/default.json"
 
 #=================================================
+# ADD A CONFIGURATION
+#=================================================
+ynh_script_progression --message="Configuring the app..." --weight=10
+
+pushd $install_dir
+	ynh_use_nodejs
+	ynh_exec_warn_less $ynh_npm run-script wizard
+popd
+
+#=================================================
 # SETUP SYSTEMD
 #=================================================
 ynh_script_progression --message="Configuring a systemd service..." --weight=1
