--- a/scripts/install
+++ b/scripts/install
@@ -46,10 +46,10 @@ ynh_add_nginx_config
 #=================================================
 ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-ynh_add_config --template="../conf/default.conf" --destination="$install_dir/default.json"
+ynh_add_config --template="../conf/config.json" --destination="$install_dir/config.json"
 
-chmod 650 "$install_dir/default.json"
-chown $app:$app "$install_dir/default.json"
+chmod 650 "$install_dir/config.json"
+chown $app:$app "$install_dir/config.json"
 
 #=================================================
 # ADD A CONFIGURATION
